Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125513

crash when mixing QWidget style and styleSheet

    XMLWordPrintable

Details

    • Windows
    • 26af5d185 (dev), 899f708c7 (6.8), 35128e2f1 (6.7)

    Description

      crash when setting a style to a QWidget while a parent or himself has a styleSheet

       

      Update 01/10/24

      Crash still exists in Qt6.7.3

      in QStyleSheetStyle::getDefaultStyleSheet(), baseStyle() return a deleted pointer.....

      see call stack.

      Current files are still available to reproduce the crash.

       

       

      Attachments

        1. crash.png
          crash.png
          148 kB
        2. main.cpp
          0.2 kB
        3. QtWidgetsApplication1.cpp
          2 kB
        4. QtWidgetsApplication1.h
          0.3 kB
        5. QtWidgetsApplication1.qrc
          0.1 kB
        6. QtWidgetsApplication1.sln
          1 kB
        7. QtWidgetsApplication1.ui
          0.8 kB
        8. QtWidgetsApplication1.vcxproj
          5 kB
        9. QtWidgetsApplication1.vcxproj.filters
          2 kB
        For Gerrit Dashboard: QTBUG-125513
        # Subject Branch Project Status CR V

        Activity

          People

            wladimir.leuschner Wladimir Leuschner
            alban_go2 Alban Pellet
            Votes:
            3 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated: